--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:FilterBuilder"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid Column="3" Row="3">
+    <Grid>
         <Button Click="Click_LoadFile">Load Filter</Button>
     </Grid>
 </Window>
