--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,22 @@
 ﻿<Application x:Class="FilterBuilder.App"
+             mc:Ignorable="d"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FilterBuilder"
-             StartupUri="MainWindow.xaml">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:view="clr-namespace:FilterBuilder.View"
+             xmlns:viewmodel="clr-namespace:FilterBuilder.ViewModel"
+             xmlns:service="clr-namespace:FilterBuilder.Service"
+             StartupUri="View/MainView.xaml">
     <Application.Resources>
+        <service:LocatorService x:Key="Locator" d:IsDataSource="True" />
 
+        <DataTemplate DataType="{x:Type viewmodel:HomeViewModel}">
+            <view:HomeView />
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewmodel:UniqueViewModel}">
+            <view:UniqueView />
+        </DataTemplate>
     </Application.Resources>
 </Application>
