--- a/View/FragmentView.xaml
+++ b/View/FragmentView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FilterBuilder.View.UniqueView"
+﻿<UserControl x:Class="FilterBuilder.View.FragmentView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
