--- a/View/CurrencyView.xaml
+++ b/View/CurrencyView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="FilterBuilder.View.CurrencyView"
+<UserControl x:Class="FilterBuilder.View.CurrencyView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d">
-    <Grid>
-        <TextBlock Text="This is the Uniques Page" FontWeight="Bold" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center" />
-    </Grid>
+             xmlns:local="clr-namespace:FilterBuilder.View"
+             mc:Ignorable="d"
+             d:DesignHeight="300" d:DesignWidth="300">
+    <Grid />
 </UserControl>
