--- a/View/WindowView.xaml
+++ b/View/WindowView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="FilterBuilder.View.MainView"
+<Window x:Class="FilterBuilder.View.WindowView"
         mc:Ignorable="d"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,11 +8,11 @@
         DataContext="{Binding Main, Source={StaticResource Locator}}"
         Title="{Binding Title}" Width="800" Height="600" Background="DarkGray">
     <DockPanel LastChildFill="True">
-        
+
         <ItemsControl DockPanel.Dock="Top" ItemsSource="{Binding CurrentFilter.NavigationViewModels.Values}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <UniformGrid Columns="16" Rows="1" Height="40"/>
+                    <UniformGrid Columns="16" Rows="1" Height="40" />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
@@ -25,6 +25,6 @@
         </ItemsControl>
 
         <ContentControl Content="{Binding CurrentViewModel}" />
-        
+
     </DockPanel>
 </Window>
