--- a/App.xaml
+++ b/App.xaml
@@ -7,7 +7,6 @@
              xmlns:view="clr-namespace:FilterBuilder.View"
              xmlns:viewmodel="clr-namespace:FilterBuilder.ViewModel"
              xmlns:service="clr-namespace:FilterBuilder.Service"
-             xmlns:viewModel="clr-namespace:FilterBuilder.ViewModel"
              StartupUri="View/WindowView.xaml">
     <Application.Resources>
         <service:LocatorService x:Key="Locator" d:IsDataSource="True" />
@@ -19,27 +18,27 @@
         <DataTemplate DataType="{x:Type viewmodel:ChanceBaseViewModel}">
             <view:ChanceBaseView />
         </DataTemplate>
-        
+
         <DataTemplate DataType="{x:Type viewmodel:CraftingBaseViewModel}">
             <view:CraftingBaseView />
         </DataTemplate>
-        
+
         <DataTemplate DataType="{x:Type viewmodel:CurrencyViewModel}">
             <view:CurrencyView />
         </DataTemplate>
-        
+
         <DataTemplate DataType="{x:Type viewmodel:DivinationCardViewModel}">
             <view:DivinationCardView />
         </DataTemplate>
-        
+
         <DataTemplate DataType="{x:Type viewmodel:EssenceViewModel}">
             <view:EssenceView />
         </DataTemplate>
-        
+
         <DataTemplate DataType="{x:Type viewmodel:FlaskViewModel}">
             <view:FlaskView />
         </DataTemplate>
-        
+
         <DataTemplate DataType="{x:Type viewmodel:FossilViewModel}">
             <view:FossilView />
         </DataTemplate>
@@ -55,24 +54,24 @@
         <DataTemplate DataType="{x:Type viewmodel:MapViewModel}">
             <view:MapView />
         </DataTemplate>
-        
+
         <DataTemplate DataType="{x:Type viewmodel:SkillGemViewModel}">
             <view:SkillGemView />
         </DataTemplate>
-        
+
         <DataTemplate DataType="{x:Type viewmodel:UniqueAccessoryViewModel}">
             <view:UniqueAccessoryView />
         </DataTemplate>
-        
+
         <DataTemplate DataType="{x:Type viewmodel:UniqueArmourViewModel}">
             <view:UniqueArmourView />
         </DataTemplate>
-        
+
         <DataTemplate DataType="{x:Type viewmodel:UniqueWeaponViewModel}">
             <view:UniqueWeaponView />
         </DataTemplate>
-        
-        <DataTemplate DataType="{x:Type viewModel:VendorRecipeViewModel}">
+
+        <DataTemplate DataType="{x:Type viewmodel:VendorRecipeViewModel}">
             <view:VendorRecipeView />
         </DataTemplate>
 
