--- a/View/WindowView.xaml
+++ b/View/WindowView.xaml
@@ -4,9 +4,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:enum="clr-namespace:FilterBuilder.Enum"
         DataContext="{Binding Main, Source={StaticResource Locator}}"
-        Title="{Binding Title}" Width="800" Height="600" Background="DarkGray">
+        Title="{Binding Title}" Width="800" Height="600" Left="0" Top="0" Background="DarkGray">
     <DockPanel LastChildFill="True">
 
         <ItemsControl DockPanel.Dock="Top" ItemsSource="{Binding CurrentFilter.NavigationViewModels.Values}">
