--- a/App.xaml
+++ b/App.xaml
@@ -14,73 +14,61 @@
         <DataTemplate DataType="{x:Type viewmodel:HomeViewModel}">
             <view:HomeView />
         </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:ChanceBaseViewModel}">
-            <view:ChanceBaseView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:CraftingBaseViewModel}">
-            <view:CraftingBaseView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:CurrencyViewModel}">
-            <view:CurrencyView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:DivinationCardViewModel}">
-            <view:DivinationCardView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:EssenceViewModel}">
-            <view:EssenceView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:FlaskViewModel}">
-            <view:FlaskView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:FossilViewModel}">
-            <view:FossilView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:FragmentViewModel}">
-            <view:FragmentView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:LevelingViewModel}">
-            <view:LevelingView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:MapViewModel}">
-            <view:MapView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:SkillGemViewModel}">
-            <view:SkillGemView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:UniqueAccessoryViewModel}">
-            <view:UniqueAccessoryView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:UniqueArmourViewModel}">
-            <view:UniqueArmourView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:UniqueWeaponViewModel}">
-            <view:UniqueWeaponView />
-        </DataTemplate>
-
-        <DataTemplate DataType="{x:Type viewmodel:VendorRecipeViewModel}">
-            <view:VendorRecipeView />
+        <DataTemplate DataType="{x:Type viewmodel:EditorViewModel}">
+            <view:EditorView />
         </DataTemplate>
 
 
-        <Style x:Key="NavigationButton" TargetType="Button">
+        <Style TargetType="{x:Type Button}" x:Key="HomeButton">
             <Setter Property="Cursor" Value="Hand" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="Padding" Value="5 5" />
-            <Setter Property="Margin" Value="5 0" />
+            <Setter Property="Width" Value="60" />
+            <Setter Property="Height" Value="45" />
+            <Setter Property="Padding" Value="0 5 0 3" />
+            <Setter Property="Background" Value="#65686A" />
+            <Setter Property="BorderBrush" Value="#3F3E3E" />
+            <Setter Property="BorderThickness" Value="0 0 1 0" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Width="{TemplateBinding Width}" Height="{TemplateBinding Height}" Padding="{TemplateBinding Padding}" Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Cursor="{TemplateBinding Cursor}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#222" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style TargetType="{x:Type Button}" />
+
+        <Style TargetType="Button" x:Key="NavigationButton">
+            <Setter Property="Width" Value="90" />
+            <Setter Property="Height" Value="45" />
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="BorderBrush" Value="#3F3E3E" />
+            <Setter Property="BorderThickness" Value="0 0 1 0" />
+            <Setter Property="Padding" Value="0 5 0 3" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Width="{TemplateBinding Width}" Height="{TemplateBinding Height}" Padding="{TemplateBinding Padding}" Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Cursor="{TemplateBinding Cursor}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#222" />
+                </Trigger>
+            </Style.Triggers>
         </Style>
     </Application.Resources>
 </Application>
