--- a/View/EditorView.xaml
+++ b/View/EditorView.xaml
@@ -1,10 +1,14 @@
-<UserControl x:Class="FilterBuilder.View.ChanceBaseView"
+<UserControl x:Class="FilterBuilder.View.EditorView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:FilterBuilder.View"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid />
+    <DockPanel>
+        <Grid>
+            
+        </Grid>
+        
+    </DockPanel>
 </UserControl>
