--- a/View/EditorView.xaml
+++ b/View/EditorView.xaml
@@ -1,14 +1,39 @@
 <UserControl x:Class="FilterBuilder.View.EditorView"
+             mc:Ignorable="d"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
-    <DockPanel>
-        <Grid>
-            
+             xmlns:enum="clr-namespace:FilterBuilder.Enum">
+    <DockPanel LastChildFill="True">
+        <Grid DockPanel.Dock="Top" Height="40">
+            <Grid.ColumnDefinitions>    
+                <ColumnDefinition></ColumnDefinition>    
+                <ColumnDefinition></ColumnDefinition>    
+            </Grid.ColumnDefinitions> 
+            <TextBlock Grid.Row="0" Grid.Column="0">This is some text</TextBlock>
+            <ComboBox Grid.Row="0" Grid.Column="1">
+                <ItemsControl ItemsSource="{x:Static enum:Category.Categories}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <ComboBoxItem Content="A"></ComboBoxItem>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ComboBox>
         </Grid>
-        
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Width="100" Height="Auto" Margin="10 0 0 0" Background="Tan">A</TextBlock>
+                    <TextBlock Width="100" Height="Auto" Margin="10 0 0 0" Background="Tan">B</TextBlock>
+                    <TextBlock Width="100" Height="Auto" Margin="10 0 0 0" Background="Tan">C</TextBlock>
+                    <TextBlock Width="100" Height="Auto" Margin="10 0 0 0" Background="Tan">D</TextBlock>
+                    <TextBlock Width="100" Height="Auto" Margin="10 0 0 0" Background="Tan">E</TextBlock>
+                    <TextBlock Width="100" Height="Auto" Margin="10 0 0 0" Background="Tan">F</TextBlock>
+                    <TextBlock Width="100" Height="Auto" Margin="10 0 0 0" Background="Tan">G</TextBlock>
+                    <TextBlock Width="100" Height="Auto" Margin="10 0 0 0" Background="Tan">H</TextBlock>
+                </StackPanel>
+            </ScrollViewer>
+
     </DockPanel>
 </UserControl>
