--- a/App.xaml
+++ b/App.xaml
@@ -7,17 +7,24 @@
              xmlns:view="clr-namespace:FilterBuilder.View"
              xmlns:viewmodel="clr-namespace:FilterBuilder.ViewModel"
              xmlns:service="clr-namespace:FilterBuilder.Service"
+             xmlns:converters="clr-namespace:FilterBuilder.Converters"
              StartupUri="View/WindowView.xaml">
     <Application.Resources>
         <service:LocatorService x:Key="Locator" d:IsDataSource="True" />
+        <converters:StringToTranslationConverter x:Key="StringToTranslationConverter" />
 
         <DataTemplate DataType="{x:Type viewmodel:HomeViewModel}">
             <view:HomeView />
         </DataTemplate>
-        <DataTemplate DataType="{x:Type viewmodel:EditorViewModel}">
-            <view:EditorView />
+        <DataTemplate DataType="{x:Type viewmodel:RegisterViewModel}">
+            <view:RegisterView />
         </DataTemplate>
-
+        <DataTemplate DataType="{x:Type viewmodel:CompleteViewModel}">
+            <view:CompleteView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodel:PaymentViewModel}">
+            <view:PaymentView />
+        </DataTemplate>
 
         <Style TargetType="{x:Type Button}" x:Key="HomeButton">
             <Setter Property="Cursor" Value="Hand" />
