--- a/View/WindowView.xaml
+++ b/View/WindowView.xaml
@@ -4,34 +4,29 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:enum="clr-namespace:FilterBuilder.Enum"
-        DataContext="{Binding Main, Source={StaticResource Locator}}"
-        Title="{Binding Title}" Width="800" Height="600" Left="0" Top="0" Background="#2B2B2B">
+        xmlns:converter="clr-namespace:FilterBuilder.Converters"
+        xmlns:model="clr-namespace:FilterBuilder.Model"
+        DataContext="{Binding Window, Source={StaticResource Locator}}"
+        Title="{Binding Title}" Width="800" Height="600" Left="0" Top="0">
     <DockPanel LastChildFill="True">
-        <Border DockPanel.Dock="Top" BorderThickness="0 0 0 1" BorderBrush="#65686A">
-            <StackPanel Orientation="Horizontal">
-                <Button Style="{StaticResource HomeButton}" Command="{Binding ChangeViewCommand}" CommandParameter="{x:Static enum:View.HOME}">
-                    <Image Source="../Resources/Images/Home.png" />
-                </Button>
-                <ItemsControl DockPanel.Dock="Top" ItemsSource="{Binding CurrentFilter.Categories}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <UniformGrid Rows="1" />
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Button Style="{StaticResource NavigationButton}" 
-                                    Command="{Binding DataContext.ChangeViewCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{x:Static enum:View.EDITOR}">
-                                <Image Source="{Binding Category.Image}" />
-                            </Button>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </StackPanel>
-        </Border>
-
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="60" Margin="0,10,10,10" >
+            <Label Content="{Binding Path=ChangeLanguageCommand,Converter={StaticResource StringToTranslationConverter}, ConverterParameter='LANGUAGE', UpdateSourceTrigger=PropertyChanged}"/>
+            <ItemsControl ItemsSource="{Binding AvailableLanguages, Source={x:Static model:State.Instance}}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Horizontal" />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Button BorderBrush="Transparent" BorderThickness="0" Background="Transparent" Margin="10,0,0,0" Cursor="Hand"
+                                Command="{Binding DataContext.ChangeLanguageCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{Binding Id}">
+                            <Image Source="{Binding Icon}" RenderOptions.BitmapScalingMode="HighQuality" Margin="5" />
+                        </Button>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </StackPanel>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </DockPanel>
-
 </Window>
